Added register endpoint.
