# docs/swagger.json
@@ -23,7 +23,7 @@
                 "tags": [
                     "sign"
                 ],
-                "summary": "Allows the user to login nonono",
+                "summary": "Allows the user to login",
                 "parameters": [
                     {
                         "description": "Login object",
@@ -167,14 +167,31 @@
         "user.RegisterCommand": {
             "type": "object",
             "required": [
+                "email",
                 "firstname",
-                "lastname"
+                "gender",
+                "lastname",
+                "password",
+                "phoneNumber"
             ],
             "properties": {
+                "email": {
+                    "type": "string"
+                },
                 "firstname": {
                     "type": "string"
                 },
+                "gender": {
+                    "type": "integer"
+                },
                 "lastname": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string",
+                    "minLength": 6
+                },
+                "phoneNumber": {
                     "type": "string"
                 }
             }
